<resources>
    <string name="app_name">Hp Sales Dashboard</string>
    <string name="loading">Loading ...</string>

    <!-- Dashboard Screen -->
    <string name="sale_detail">Sale Detail</string>
    <string name="operator">Operator</string>
    <string name="debtor">Debtor</string>
    <string name="bank_deposit">Bank Deposit</string>

    <!-- Sale Screen -->
    <string name="cash_Collected">Cash Collected</string>
    <string name="total_sales_value">Total Sales Value</string>
    <string name="net_collection">Net Collection</string>

    <!-- Operator Screen -->
    <string name="operator_id_column">Operator Id</string>
    <string name="operator_id_header">Operator Id : </string>
    <string name="operator_name_header">Operator Name</string>
    <string name="operator_status_header">Is Valid</string>
    <string name="operator_add_button">Add Operator</string>
    <string name="operator_name_hint">Operator Name</string>
    <string name="operator_successful_message">Operator saved successfully</string>

    <!-- Debtor Screen -->
    <string name="debtor_id_header">Debtor Id : </string>
    <string name="debtor_name_header">Debtor Name</string>
    <string name="debtor_status_header">Is Valid</string>
    <string name="debtor_add_button">Add Debtor</string>
    <string name="debtor_name_hint">Enter debtor Name</string>
    <string name="debtor_id_column">Debtor Id</string>

    <!-- Sale Detail Screen -->
    <string name="sale_detail_add_btn">Add Sales Details</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="product">Product</string>
    <string name="rate">Rate</string>
    <string name="start_reading">Start Reading</string>
    <string name="end_reading">End Reading</string>
    <string name="sales_volume">Sales Volume</string>
    <string name="pump_test_volume">Pump Test Volume</string>
    <string name="amount">Amount</string>
    <string name="start_time_error">Start Time is required</string>
    <string name="start_time_greater_than_end_time_error">Start Time should be less than end time</string>
    <string name="end_time_error">End Time is required</string>
    <string name="rate_error">Rate is required</string>
    <string name="start_reading_error">Start reading is required</string>
    <string name="start_reading_greater_than_end_reading_error">Start reading should be less than end reading</string>
    <string name="end_reading_error">End reading is required</string>
    <string name="pump_test_volume_error">Pump Test Volume is required</string>

    <!-- Expense Screen -->
    <string name="expense_add_btn">Add Expense</string>
    <string name="description">Description</string>
    <string name="amount_error">Amount is required</string>
    <string name="description_error">Description is required</string>

    <!-- Credit Screen -->
    <string name="credit_add_btn">Add Credit</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="driver_name">Driver Name</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="driver_error">Driver is required</string>
    <string name="vehicle_error">Vehicle is required</string>

    <!-- Oil Sale Screen -->
    <string name="oil_sale_add_btn">Add Oil Sale</string>
    <string name="quantity">Quantity</string>
    <string name="product_error">Product is required.</string>
    <string name="quantity_error">Quantity is required.</string>

    <!-- Online Deposit Screen -->
    <string name="online_deposit_add_btn">Add Online Deposit</string>
    <string name="mode">Mode</string>
    <string name="remark">Remark</string>
    <string name="mode_error">Mode is required</string>
    <string name="remark_error">Remark is required</string>


    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="login_btn">Login</string>
    <string name="mobile_no_hint">Enter mobile number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>